--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+п»ї
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,10 +24,10 @@
             <td>
                 <table border="0" cellspacing="0" cellpadding="0" border-collapse="collapse">
                     <tr>
-                        <td><button class="UIBbutton" onclick="Controller.addContention()">Добавить (ctrl||shift)&enter </button></td>
-                        <td><button class="UIBbutton" onclick="Controller.changeContention()">Изменить</button></td>
-                        <td><button class="UIBbutton" onclick="Controller.createTopicFromContention()" style="background-color: #e6e6e6;">сделать топиком</button></td>
-                        <td><button class="UIBbutton" onclick="">перенести(shift+click)</button></td>
+                        <td><button class="UIBbutton" onclick="Controller.addContention()">Ж’РѕР±Р°РІРёС‚СЊ (ctrl||shift)&enter </button></td>
+                        <td><button class="UIBbutton" onclick="Controller.changeContention()">В»Р·РјРµРЅРёС‚СЊ</button></td>
+                        <td><button class="UIBbutton" onclick="Controller.createTopicFromContention()" style="background-color: #e6e6e6;">СЃРґРµР»Р°С‚СЊ С‚РѕРїРёРєРѕРј</button></td>
+                        <td><button class="UIBbutton" onclick="">РїРµСЂРµРЅРµСЃС‚Рё(shift+click)</button></td>
                         <td><button style="background-color:#7bfc03;" onclick="Controller.changeContentionColor('#7bfc03')"> Text</button> </td>
                         <td><button style="background-color:#f8fc03;" onclick="Controller.changeContentionColor('#f8fc03')"> Text</button> </td>
                         <td><button style="background-color:#03fcbe;" onclick="Controller.changeContentionColor('#03fcbe')"> Text</button></td>
@@ -35,10 +35,10 @@
                         <td><button class="UIBbutton" onclick="Controller.updatePassword()">reload</button></td>
                     </tr>
                     <tr>
-                        <td><button class="UIBbutton" onclick="Controller.addLink()">добавить ссылку</button></td>
-                        <td><button class="UIBbutton" onclick="Controller.deleteContention()">удалить(del)</button></td>
+                        <td><button class="UIBbutton" onclick="Controller.addLink()">РґРѕР±Р°РІРёС‚СЊ СЃСЃС‹Р»РєСѓ</button></td>
+                        <td><button class="UIBbutton" onclick="Controller.deleteContention()">СѓРґР°Р»РёС‚СЊ(del)</button></td>
                         <td><button class="UIBbutton" onclick="Controller.addSelectedToArchive()">(archive)</button></td>
-                        <td><button class="UIBbutton" onclick="Controller.collapceSelectedContention()" style="background-color: #9b9bff;">свернуть(right+click)</button></td>
+                        <td><button class="UIBbutton" onclick="Controller.collapceSelectedContention()" style="background-color: #9b9bff;">СЃРІРµСЂРЅСѓС‚СЊ(right+click)</button></td>
                         <td><button style="background-color:#FFF;" onclick="Controller.changeContentionColor('#FFF')"> Text</button></td>
                         <td><button style="background-color:#fc03f0;" onclick="Controller.changeContentionColor('#fc03f0')"> Text</button></td>
                         <td><button style="background-color:#fc3503;" onclick="Controller.changeContentionColor('#fc3503')"> Text</button></td>
