Test switch to localhosted data server

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page - Forum</title>
-    <link rel="stylesheet" href="/css/site.css" />
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="https://tern321.github.io/css/site.css" />
+    <link rel="icon" type="image/x-icon" href="https://tern321.github.io/img/favicon.ico">
 </head>
 <body>
     <div class="container">
@@ -53,14 +53,13 @@
         </main>
     </div>
 
-    <script src="//api.backendless.com/sdk/js/latest/backendless.js"></script>
-    <script src="/js/JSWrapper.js"></script>
-    <script src="/js/Controller.js"></script>
-    <script src="/js/Input.js"></script>
-    <script src="/js/UIDrawer.js"></script>
-    <script src="/js/Model.js"></script>
-    <script src="/js/Network.js"></script>
-    <script src="/js/Encription.js"></script>
+    <script src="https://tern321.github.io/js/JSWrapper.js"></script>
+    <script src="https://tern321.github.io/js/Controller.js"></script>
+    <script src="https://tern321.github.io/js/Input.js"></script>
+    <script src="https://tern321.github.io/js/UIDrawer.js"></script>
+    <script src="https://tern321.github.io/js/Model.js"></script>
+    <script src="https://tern321.github.io/js/Network.js"></script>
+    <script src="https://tern321.github.io/js/Encription.js"></script>
     
 </body>
 </html>
