--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         <button style="background-color:#03fcbe;" onclick="Controller.changeContentionColor('#03fcbe')"> Text</button>
                         <button class="UIBbutton" onclick="Controller.addContention()" id='addButton'>Добавить</button>
                         <button class="UIBbutton" onclick="Controller.changeContention()" id='changeButton'>Изменить</button>
-                        <button class="UIBbutton" onclick="Controller.createTopicFromContention()" style="background-color: #e6e6e6;">сделать топиком</button>
-                        <button class="UIBbutton" onclick="">перенести(shift+click)</button>
+                        <button class="UIBbutton" onclick="Controller.createTopicFromContention()" style="background-color: #e6e6e6;">Топик</button>
+                        <button class="UIBbutton" onclick="">перенести</button>
                         <button class="UIBbutton" onclick="Controller.import()">import</button>
                     </div>
                     <div>
@@ -36,10 +36,10 @@
                         <button style="background-color:#FFF;" onclick="Controller.changeContentionColor('#FFF')"> Text</button>
                         <button style="background-color:#fc03f0;" onclick="Controller.changeContentionColor('#fc03f0')"> Text</button>
                         <button style="background-color:#fc3503;" onclick="Controller.changeContentionColor('#fc3503')"> Text</button>
-                        <button class="UIBbutton" onclick="Controller.addLink()">добавить ссылку</button>
-                        <button class="UIBbutton" onclick="Controller.deleteContention()">удалить(del)</button>
+                        <button class="UIBbutton" onclick="Controller.addLink()">Link</button>
+                        <button class="UIBbutton" onclick="Controller.deleteContention()">удалить</button>
                         <button class="UIBbutton" onclick="Controller.addSelectedToArchive()">(archive)</button>
-                        <button class="UIBbutton" onclick="Controller.collapceSelectedContention()" style="background-color: #9b9bff;">свернуть(right+click)</button>
+                        <button class="UIBbutton" onclick="Controller.collapceSelectedContention()" style="background-color: #9b9bff;">свернуть</button>
                         <button class="UIBbutton" onclick="Controller.export()">export</button>
                     </div>
                 </div>
