First mobile version

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <main role="main" class="pb-3">
             <div ondrop="Controller.addFile(event);" ondragover="Controller.dragover_handler(event);">
     <div id="contentions"></div>
-    <div id="topics"></div>
-    <div class="menuStyle" style="margin: 0px;">
+    <div id="topics" class="topicsStyle" ></div>
+    <div id="uiDiv" class="menuStyle" style="margin: 0px;">
         <div class="uiButtons">
             <textarea id="argumentTextArea"  placeholder="Текст новой заметки" style="width:320px; height:55px;"></textarea>
             <div>
                 <div>
                     <div>
-                        <textarea id="loginTextArea" style="width:180px; height:20px;" placeholder="логин"></textarea>
+                        <textarea id="loginTextArea" style="width:20px; height:20px;" placeholder="логин"></textarea>
                         <button style="background-color:#7bfc03;" onclick="ActionsController.changeContentionColor('#7bfc03')"> Text</button>
                         <button style="background-color:#f8fc03;" onclick="ActionsController.changeContentionColor('#f8fc03')"> Text</button>
                         <button style="background-color:#03fcbe;" onclick="ActionsController.changeContentionColor('#03fcbe')"> Text</button>
@@ -32,7 +32,7 @@
                         <button class="UIBbutton" onclick="ActionsController.addLink()">Add Link</button>
                     </div>
                     <div>
-                        <textarea id="encriptionKeyTextArea" style="width:180px; height:20px;" placeholder="ключ для шифрования"></textarea>
+                        <textarea id="encriptionKeyTextArea" style="width:20px; height:20px;" placeholder="ключ для шифрования"></textarea>
                         <button style="background-color:#FFF;" onclick="ActionsController.changeContentionColor('#FFF')"> Text</button>
                         <button style="background-color:#fc03f0;" onclick="ActionsController.changeContentionColor('#fc03f0')"> Text</button>
                         <button style="background-color:#fc3503;" onclick="ActionsController.changeContentionColor('#fc3503')"> Text</button>
