Emptry page size fix

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+		<div style="width:1200px; height:1px;"></div>
 		<div id="contentions"></div>
 		<div id="topics" class="topicsStyle"></div>
 		<div id="uiDiv" class="menuStyle">
