Production brunch version

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://tern321.github.io/js/ActionsController.js"></script>
+    <script src="https://tern321.github.io/js/ActionsController.js"></script>
+    <script src="https://tern321.github.io/js/Command.js"></script>
+    <script src="https://tern321.github.io/js/Contention.js"></script>
     <script src="https://tern321.github.io/js/UpdateDataRequestController.js"></script>
     <script src="https://tern321.github.io/js/Controller.js"></script>
     <script src="https://tern321.github.io/js/Input.js"></script>
