--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-		<div style="width:1300px; height:1px;"></div>
+		<div style="width:1700px; height:1px;"></div>
 		<div id="contentions"></div>
 		<div id="topics" class="topicsStyle"></div>
 		<div id="uiDiv" class="menuStyle">
@@ -28,6 +28,7 @@
 					<button class="UIButton" onclick="ActionsController.import()">import</button>
 					<button class="UIButton" onclick="ActionsController.addLink()">Add Link</button>
 					<button class="UIButton" onclick="Controller.showLogin()">Show</button>
+					<button class="UIButton" onclick="Controller.copy()">Copy</button>
 
 					<button class="UIColorButton" style="background-color:#03fcbe;" onclick="ActionsController.changeContentionColor('#03fcbe')"> Text</button>
 					<button class="UIColorButton" style="background-color:#7bfc03;" onclick="ActionsController.changeContentionColor('#7bfc03')"> Text</button>
@@ -41,7 +42,8 @@
 					<button class="UIButton" onclick="ActionsController.collapceSelectedContention()" style="background-color: #9b9bff;">свернуть</button>
 					<button class="UIButton" onclick="ActionsController.export()">export</button>
 					<button class="UIButton" onclick="Controller.reload()">Reload</button>
-
+					<button class="UIButton" onclick="Controller.copy()">Copy</button>
+					
 					<button class="UIColorButton" style="background-color:#FFF;" onclick="ActionsController.changeContentionColor('#FFF')"> Text</button>
 					<button class="UIColorButton" style="background-color:#fc03f0;" onclick="ActionsController.changeContentionColor('#fc03f0')"> Text</button>
 					<button class="UIColorButton" style="background-color:#fc3503;" onclick="ActionsController.changeContentionColor('#fc3503')"> Text</button>
